Twerked index.js file

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,22 +1,28 @@
 <% layout('layouts/boilerplate') %>
-<h1>All Campgrounds</h1>
-
-<% for (let campground of campgrounds) {%>
-<div class="cards mb-3">
-    <div class="row">
-        <div class="col-md-4">
-            <img class="img-fluid" alt="" src="<%= campground.image %>">
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title"><%= campground.title %></h5>
-                <p class="card-text"><%= campground.description %></p>
-                <p class="card-text">
-                    <small class="text-muted"><%= campground.location%></small>
-                </p>
-                <a class="btn btn-primary" href="/campgrounds/<%= campground.id %>">View <%= campground.title %></a>
+    <h1>All Campgrounds</h1>
+    <% for (let campground of campgrounds) {%>
+        <div class="cards mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid" alt="" src="<%= campground.image %>">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= campground.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= campground.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <%= campground.location%>
+                            </small>
+                        </p>
+                        <a class="btn btn-primary" href="/campgrounds/<%= campground.id %>">View <%= campground.title %>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<% } %>
+        <% } %>
