Modified Boilerplate template

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -9,7 +9,7 @@
     <title>YelpCamp</title>
 </head>
 
-<body class="d-flex flex-column vh-100">
+<body class="d-flex flex-column">
     <%- include('../partials/navbar') %>
         <main class="container mt-5">
             <%- body %>
