Modofied .id to _id

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -19,7 +19,8 @@
                                 <%= campground.location%>
                             </small>
                         </p>
-                        <a class="btn btn-primary" href="/campgrounds/<%= campground.id %>">View <%= campground.title %>
+                        <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>">View <%= campground.title
+                                %>
                         </a>
                     </div>
                 </div>
