[Added] review section on show page

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,27 +1,51 @@
 <% layout('layouts/boilerplate') %>
 
-<div class="row">
-    <div class="col-md-6 offset-3">
-        <div class="card mb-2">
-            <img src="<%= campground.image%>" class="card-img-top" alt="<%= campground.title %> Image">
-            <div class="card-body">
-                <h5 class="card-title"><%= campground.title %></h5>
-                <p class="card-text"><%= campground.description %></p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item text-muted"><%= campground.location %></li>
-                <li class="list-group-item">$<%= campground.price %>/night</li>
-            </ul>
-            <div class="card-body">
-                <a href="/campgrounds/<%= campground.id  %>/edit" class="card-link btn btn-primary">Edit Edit
-                    <%= campground.title %></a>
-                <form class="d-inline" action="/campgrounds/<%= campground.id  %>?_method=DELETE" method="POST">
-                    <button class="card-link btn btn-danger">Delete <%= campground.title %></button>
+    <div class="row">
+        <div class="col-md-6 offset-3">
+            <div class="card mb-2">
+                <img src="<%= campground.image%>" class="card-img-top" alt="<%= campground.title %> Image">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <%= campground.title %>
+                    </h5>
+                    <p class="card-text">
+                        <%= campground.description %>
+                    </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-muted">
+                        <%= campground.location %>
+                    </li>
+                    <li class="list-group-item">$<%= campground.price %>/night</li>
+                </ul>
+                <div class="card-body">
+                    <a href="/campgrounds/<%= campground._id  %>/edit" class="card-link btn btn-primary">Edit Edit
+                        <%= campground.title %>
+                    </a>
+                    <form class="d-inline" action="/campgrounds/<%= campground.id  %>?_method=DELETE" method="POST">
+                        <button class="card-link btn btn-danger">Delete <%= campground.title %></button>
+                    </form>
+                </div>
+                <div class="card-footer text-muted">
+                    2 days ago
+                </div>
+                <h2>Leave a Review</h2>
+                <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form"
+                    novalidate>
+                    <div class="mb-3">
+                        <label class="form-label" for="rating">Rating</label>
+                        <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="body">Review Text</label>
+                        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"
+                            required></textarea>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <button class="btn btn-success">Submit</button>
                 </form>
-            </div>
-            <div class="card-footer text-muted">
-                2 days ago
             </div>
         </div>
     </div>
-</div>
