--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,7 +12,8 @@
 <body class="d-flex flex-column">
     <%- include('../partials/navbar') %>
         <main class="container mt-5">
-            <%- body %>
+            <%- include('../partials/flash') %>
+                <%- body %>
         </main>
 
         <%- include('../partials/footer') %>
