--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,19 +16,26 @@
                     <li class="list-group-item text-muted">
                         <%= campground.location %>
                     </li>
+                    <li class="list-group-item">
+                        Submitted by: <%= campground.author.username %>
+                    </li>
                     <li class="list-group-item">$<%= campground.price %>/night</li>
                 </ul>
-                <div class="card-body">
-                    <a href="/campgrounds/<%= campground._id  %>/edit" class="card-link btn btn-primary">Edit Edit
-                        <%= campground.title %>
-                    </a>
-                    <form class="d-inline" action="/campgrounds/<%= campground.id  %>?_method=DELETE" method="POST">
-                        <button class="card-link btn btn-danger">Delete <%= campground.title %></button>
-                    </form>
-                </div>
-                <div class="card-footer text-muted">
-                    2 days ago
-                </div>
+                <% if (currentUser && campground.author.equals(currentUser._id)) { %>
+                    <div class="card-body">
+                        <a href="/campgrounds/<%= campground._id  %>/edit" class="card-link btn btn-primary">Edit
+                            <%= campground.title %>
+                        </a>
+                        <form class="d-inline" action="/campgrounds/<%= campground._id  %>?_method=DELETE"
+                            method="POST">
+                            <button class="card-link btn btn-danger">Delete <%= campground.title %></button>
+                        </form>
+                    </div>
+                    <% } %>
+
+                        <div class="card-footer text-muted">
+                            2 days ago
+                        </div>
 
             </div>
         </div>
