--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,8 +3,8 @@
         <h1 class="text-center">Edit <%= campground.title %>
         </h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds/<%= campground.id %>?_method=PUT" method="POST" novalidate
-                class="validated-form">
+            <form action="/campgrounds/<%= campground.id %>?_method=PUT" method="POST" novalidate class="validated-form"
+                enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]"
@@ -22,12 +22,8 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]"
-                        value="<%= campground.image %>" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
+                    <label class="form-label" for="image">Add images</label>
+                    <input type="file" name="campground[image]" id="images" multiple>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
