--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -4,7 +4,7 @@
         <div class="cards mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" alt="" src="<%= campground.image %>">
+                    <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
