Styled file input

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -22,8 +22,8 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="image">Add images</label>
-                    <input type="file" name="campground[image]" id="images" multiple>
+                    <label for="campImage" class="form-label">Add more Campground Images</label>
+                    <input class="form-control" type="file" id="campImage" name="campground[image]" multiple>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
