--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -17,14 +17,12 @@
                         Looks good!
                     </div>
                 </div>
-                <input type="file" name="campground[image]" id="" multiple>
-                <!-- <div class="mb-3">
-                <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" id="image" name="campground[image]" required>
-                <div class="valid-feedback">
-                    Looks good!
+
+                <div class="mb-3">
+                    <label for="campImage" class="form-label">Upload Campground Images</label>
+                    <input class="form-control" type="file" id="campImage" name="campground[image]" multiple>
                 </div>
-            </div> -->
+
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
                     <textarea class="form-control" type="text" id="description" name="campground[description]"
