--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -44,6 +44,16 @@
                             Looks good!
                         </div>
                     </div>
+                    <div class="mb-3">
+                        <% campground.images.forEach((img, i)=> {%>
+                            <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+                            <div class="form-check-inline">
+                                <input type="checkbox" id="image-<%= i %>" name="deleteImages[]"
+                                    value="<%= img.filename %>">
+                            </div>
+                            <label for="image-<%= i %>">Delete?</label>
+                            <% })%>
+                    </div>
                     <div class="mt-3 mb-3">
                         <button class="btn btn-info">Update <%= campground.title %></button>
                     </div>
