--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,6 +3,8 @@
 
     <div class="row">
         <div class="col-md-6">
+            <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
+
             <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i)=> { %>
@@ -61,6 +63,8 @@
             </div>
         </div>
         <div class="col-md-6">
+            <div id='map' style='width: 400px; height: 300px;'></div>
+            <br>
             <% if (currentUser) { %>
                 <h2>Leave a Review</h2>
                 <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form"
@@ -120,3 +124,10 @@
                         <% } %>
         </div>
     </div>
+
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+        const campground = '<%- JSON.stringify(campground) %>';
+    </script>
+
+    <script src="/javascripts/showMap.js"></script>
