--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+    <div id="map" style="width: 100%; height: 400px"></div>
     <h1>All Campgrounds</h1>
     <% for (let campground of campgrounds) {%>
         <div class="cards mb-3">
@@ -16,6 +17,9 @@
                         <h5 class="card-title">
                             <%= campground.title %>
                         </h5>
+                        <h5 class="card-title">
+                            <%= campground.properties.popUpMarkup %>
+                        </h5>
                         <p class="card-text">
                             <%= campground.description %>
                         </p>
@@ -32,3 +36,10 @@
             </div>
         </div>
         <% } %>
+
+            <script>
+                const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+                const campgrounds = { features: JSON.parse('<%-JSON.stringify(campgrounds)%>') };
+            </script>
+
+            <script src="/javascripts/clusterMap.js"></script>
