--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,9 +1,9 @@
 <% layout('layouts/boilerplate') %>
-    <div id="map" style="width: 100%; height: 400px"></div>
+    <div id="cluster-map"></div>
     <h1>All Campgrounds</h1>
     <% for (let campground of campgrounds) {%>
-        <div class="cards mb-3">
-            <div class="row">
+        <div class="card mb-3">
+            <div class="row g-0">
                 <div class="col-md-4">
                     <% if (campground.images.length) { %>
                         <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
