--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,9 +3,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
-
-            <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div id="campgroundCarousel" class="carousel slide card-img-top" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i)=> { %>
                         <div class="carousel-item <%= i === 0 ? 'active' : "" %>">
@@ -63,7 +61,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <div id='map' style='width: 400px; height: 300px;'></div>
+            <div id='map'></div>
             <br>
             <% if (currentUser) { %>
                 <h2>Leave a Review</h2>
